@@ -11,8 +11,7 @@
 void
 testTortureExecute (void)
 {
-// TODO: Enable when sdcc supports long long!
-#if 0
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_hc08) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
   int tmp;
   unsigned long long utmp1, utmp2;
 
